@@ -32,7 +32,7 @@ Feature: Select List
       | search_by |
       | index     |
 
-  Scenario: Retrieve a select list
-    When I retrieve a select list
-    Then I should know it exists
-    And I should know it is visible
+  Scenario: Iterating through the options in the select list
+    When I search for the select list by "id"
+    Then option "1" should contain "Test 1"
+    And option "2" should contain "Test 2"
