@@ -18,3 +18,4 @@ require 'page-object/elements/text_area'
 require 'page-object/elements/list_item'
 require 'page-object/elements/unordered_list'
 require 'page-object/elements/ordered_list'
+require 'page-object/elements/option'
